--- a/futurework.tex
+++ b/futurework.tex
@@ -7,6 +7,6 @@ So far, the developed software package depends on predefined derivatives and gra
 More activation functions will be added and many new loss functions to serve the easiness and generality of this package. In the current status, NumNN.jl only accepts one input layer and one output layer, and multiple input and output layers will be also supported in the upcoming versions.
 
 
-\section*{Boarder Impact}
+%\section*{Boarder Impact}
 
-Since this paper does not present any new method or approach of neural networks' applications and implementations, this section (as its present is mandatory by conference style checklist) is not applicable for this work.
+%Since this paper does not present any new method or approach of neural networks' applications and implementations, this section (as its present is mandatory by conference style checklist) is not applicable for this work.
