--- a/introduction.tex
+++ b/introduction.tex
@@ -29,7 +29,7 @@ julia> aInt + bF #this will call the method +(::Integer, ::Float64) note the res
 \caption{Multiple Dispatch Example}\label{list:md}
 \end{listing}
 
-Note how the result in Listing~\ref{list:md} was promoted to be in \mintinline{julia}{Float64}, because of Julia special promotion functions (\mintinline[fontsize=\footnotesize ]{julia}{promote_type(::Type{Integer},::Type{Float64}) = Float64}). This means that functions can be used without making any modification to a package, being only required to define methods of those functions for the new type. For instance, functions such as trigonometric functions or hyperbolic functions as by default provided by Julia for its primitive types including the IEEE-754, can be simply defined for a new number system, as it will be detailed in subsection~\ref{subsec:saa}.
+Note how the result in Listing~\ref{list:md} was promoted to be in \mintinline{julia}{Float64}, because of Julia special promotion functions \footnote{\mintinline[fontsize=\footnotesize ]{julia}{promote_rule(::Type{Integer}, ::Type{Float64}) = Float64}}. This means that functions can be used without making any modification to a package, being only required to define methods of those functions for the new type. For instance, functions such as trigonometric functions or hyperbolic functions as by default provided by Julia for its primitive types including the IEEE-754, can be simply defined for a new number system, as it will be detailed in subsection~\ref{subsec:saa}.
 
 \textbf{Divide and conquer} is an essential approach that facilitates the focus on smaller pieces of a development process. It divides a system into layers, each layer is easily analyzed and improved. Hence, this property of Julia (Multiple Dispatch) makes it easier to individualize different steps, and then integrate them in a separated process. This means that less time is spent on editing and modifying, and more time remains for designing, testing and developing. The upcoming sections will present the methods and functions of NumNN.jl with which any new number system should be defined beforehand.
 
