anonymize the github repo

--- a/body.tex
+++ b/body.tex
@@ -1,6 +1,6 @@
 \section{Structure and Organization}
 %\footnote{The Software Toolkit presented in this paper will be made available when paper is accepted}% \url{https://github.com/MohHizzani/NumNN.jl}}
-The NumNN  package (library) was built on the concept of Rapid Prototyping, in order to enable fast experimentation. \emph{Being able to go from idea to result with the least possible delay is key to good research} \cite{Keras}. There are several deep learning frameworks \cite{Abadi2016,Collet2015,Jia2014,Paszke2017,PyTorch2019}, some widely spread and efficient in production and research as long as IEEE-754 representation is adopted. However, most of these libraries run on Python with no native support for newly added primitive types nor the efficiency of Julia in multiple dispatch (i.e. any number system needs an internal modification to the library itself to be capable of handling it). Even packages of Julia like Flux.jl \cite{Flux.jl-2018,Innes2018} or Knet \cite{Yuret2016k}, neither of them fully support newly added types, and do not provide the flexibility of different types for various parameters or to deliver output with a certain desired data type. NumNN provides a fully support for a total in-one-type computation, and the ability to choose the type of each group of parameters and the capabilities of delivering output at any chosen type\footnote{Online link of NumNN will be made available upon the acceptance  of this paper.}.
+The NumNN  package (library) was built on the concept of Rapid Prototyping, in order to enable fast experimentation. \emph{Being able to go from idea to result with the least possible delay is key to good research} \cite{Keras}. There are several deep learning frameworks \cite{Abadi2016,Collet2015,Jia2014,Paszke2017,PyTorch2019}, some widely spread and efficient in production and research as long as IEEE-754 representation is adopted. However, most of these libraries run on Python with no native support for newly added primitive types nor the efficiency of Julia in multiple dispatch (i.e. any number system needs an internal modification to the library itself to be capable of handling it). Even packages of Julia like Flux.jl \cite{Flux.jl-2018,Innes2018} or Knet \cite{Yuret2016k}, neither of them fully support newly added types, and do not provide the flexibility of different types for various parameters or to deliver output with a certain desired data type. NumNN provides a fully support for a total in-one-type computation, and the ability to choose the type of each group of parameters and the capabilities of delivering output at any chosen type\footnote{Online link of NumNN will be made available upon the acceptance  of this paper. However, this is an anonymized like to the package \url{https://anonymous.4open.science/r/dca40796-fb58-4df1-9474-61c83e0ae090/} }.
 
 \subsection{Fast Implementation and Deployment}
 
@@ -18,7 +18,7 @@ Defining layers sequence can be easily done like in Listing~\ref{chain},
 
 \begin{listing}[H]
 	\begin{minted}{julia}
-	X_Input, X_Ouput = chain(X_train, [Flatten(), FCLayer(120, :relu), FCLayer(10, :softmax)])
+	X_Input, X_Ouput = chain(X_train,[Flatten(),FCLayer(120,:relu),FCLayer(10,:softmax)])
 	\end{minted}
 	\caption{Chained Layers with no side branch(es)}\label{chain}
 \end{listing}
@@ -73,6 +73,7 @@ The convention to be for data shape used is (data dimension(s), channels, batch 
 		\input{typetree}
 	%\end{subfigure}
 	\caption{Layer Architecture in NumNN, the useable layers are the leaves and the other nodes are \mintinline[fontsize=\footnotesize]{julia}{abstract type}s as a supertype (parent) of the subtypes (children).}\label{fig:layerstruct}
+	%\figuredi
 \end{figure}
 
 An essential data type (\mintinline[fontsize=\footnotesize]{julia}{Model}) holds the main pointers to the layers, structure and parameters to use. Instantiating a (\mintinline[fontsize=\footnotesize]{julia}{Model}) will also invoke the initialization of the layers' scaling and bias parameters, which can be done as presented in Listing~\ref{modelinit}.
@@ -112,7 +113,7 @@ NumNN has loss functions under the \mintinline{julia}{abstract type lossFun}. Th
 \subsection{Training, Testing and Evaluating}
 To show the effectiveness of NumNN, some examples with benchmarks are applied and comparative assessment with another library is presented. Keras \cite{Collet2015} on the top of TensorFlow was one of the main influencers upon the syntax of NumNN. Thus, some benchmarks were run on both NumNN and TensorFlow. Nonetheless, some of the benchmarks could not be run on TensorFlow due to lack support for new data types, therefore, they were run only on NumNN.
 
-The data used for training/testing was Fashion MNIST \cite{Xiao2017}, and Intel(R) Xeon(R) Gold 6140 CPU @ 2.30GHz was used for all tests, and no GPU was used (NumNN does not support GPU and other back-end so far). Table~\ref{tab:bench} shows the results of all test\footnote{All benchmarks' codes were submitted as supplementary files and upon the acceptance of this paper an online link will be available.}
+The data used for training/testing was Fashion MNIST \cite{Xiao2017}, and Intel(R) Xeon(R) Gold 6140 CPU @ 2.30GHz was used for all tests, and no GPU was used (NumNN does not support GPU and other back-end so far). Table~\ref{tab:bench} shows the results of all test\footnote{All benchmarks' codes can be founded under \emph{examples} folder in this anonymized link \url{https://anonymous.4open.science/r/dca40796-fb58-4df1-9474-61c83e0ae090/}, files hold the numbers 00, 01, and 03.}
 %\footnote{%All benchmarks are available at \url{https://github.com/MohHizzani/NumNN.jl/tree/master/examples}
 %All codes where provided with the paper submit and after acceptance they will be available online}
 , when blank is used to represent tests not performed under that particular framework because the data type is not supported\footnote{\label{batchnorm}Benchmark 2 \& 3 has Batch Normalization layer where Float64 is not supported for this layer in TensorFlow}. All benchmarks perform the classification for the Fashion MNIST data using \mintinline{julia}{softmax} as an output layer, and \mintinline{julia}{categoricalCrossentropy} as a loss function. Hence, cost is an average of the loss function over all the predicted data. The less the value of cost the better. Accuracy was computed as:
@@ -123,7 +124,7 @@ The data used for training/testing was Fashion MNIST \cite{Xiao2017}, and Intel(
 The higher the value of accuracy is (the closer to one) the better the performance.
 
 
-\begin{table}[!htbp]
+\begin{table}[!hp]
 	\centering
 	\renewcommand{\arraystretch}{1.05}
 	\caption{Various benchmarks for NumNN and TensorFlow, best results across each row were highlighted.}\label{tab:bench}
